--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,8 @@ header nav ul {
   margin: 0;
   padding-right: 1.25rem;
 
+ 
+
   @media (width < 480px){
     padding: 0;
   }
@@ -103,6 +105,7 @@ header nav ul {
 
 header nav ul li {
   margin: 0 10px;
+
   
 }
 
@@ -110,6 +113,10 @@ header nav ul li a {
   color: var(--color-acento);
   text-decoration: none;
   font-size: xx-large;
+
+  @media (width < 768px){
+    font-size: 1.2rem;
+  }
 }
 header nav ul li a:hover {
   color: #f2f2f2;
@@ -125,7 +132,7 @@ header nav ul li a:hover {
   align-items: center;
   gap: 16px;
 
-  @media (width < 480px ){
+  @media (width < 768px ){
       p {
         display: none;
       }
