--- a/styles.css
+++ b/styles.css
@@ -405,13 +405,21 @@ button.next:hover {
   height: 50px;
   top: 85%;
   left: 90%;
-  background-color:var(--color-acento);
+  background-color: var(--color-acento);
   border-radius: 30%;
   text-align: center;
   padding: 0.5em;
   z-index: 999;
   
+}
 
+#boton-arriba:hover {
+  background-color: #0056b3;
+}
+
+#boton-arriba img {
+  width: 70%;
+  height: 80%;
 }
 
 
