--- a/styles.css
+++ b/styles.css
@@ -193,8 +193,11 @@ header nav ul li a:hover {
 }
 
 @media (max-width: 480px) {
-  .neon-button{
-    font-size: 1em;
+  .neon-button {
+    font-size: 0.8em;
+    width: 7.5em;
+    height: 1.5em;
+    padding: 0.2em 0.4em;
   }
 }
 
@@ -207,7 +210,6 @@ header nav ul li a:hover {
   left: 0;
   width: 100%;
   height: 100%;
-
   transform: perspective(1em) rotateX(40deg) scale(1, 0.35);
   filter: blur(1em);
   opacity: 0.7;
@@ -243,6 +245,7 @@ header nav ul li a:hover {
 .neon-button:focus::after {
   opacity: 1;
 }
+
 
 
 /*-------------------------------------------------------- CONTENIDO --------------------------------------------------------*/
