--- a/styles.css
+++ b/styles.css
@@ -196,8 +196,9 @@ header nav ul li a:hover {
   .neon-button {
     font-size: 0.8em;
     width: 7.5em;
-    height: 1.5em;
+    height: 1.6em;
     padding: 0.2em 0.4em;
+    text-align: center;
   }
 }
 
