--- a/styles.css
+++ b/styles.css
@@ -196,9 +196,10 @@ header nav ul li a:hover {
   .neon-button {
     font-size: 1em;
     width: 7.5em;
-    height: 2em;
+    height: 2.5em;
     padding: 0.2em 0.4em;
     text-align: center;
+    justify-content: center;
   }
 }
 
@@ -412,8 +413,8 @@ button.next:hover {
 
 #boton-arriba {
   position: fixed;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   top: 85%;
   left: 90%;
   background-color: var(--color-acento);
