--- a/styles.css
+++ b/styles.css
@@ -18,42 +18,23 @@ body {
   --color-neon: hsl(317 100% 54%);
 }
 
-
 /*-------------------------------------------------------- SECTIONS --------------------------------------------------------*/
 
-
-#inicio {
-  background-color: var(--color-primario);
-}
-
-#contenido {
-  background-color: var(--color-primario);
-}
-
-#nosotros {
-  background-color: var(--color-primario);
-  font-family: outfit;
-}
-
+#inicio,
+#contenido,
+#nosotros,
 #contacto {
   background-color: var(--color-primario);
-  font-family: outfit;
 }
 
-#inicio h1 {
-  color:var(--color-textos);
-  font-family: outfit;
-}
-
-#contenido h1 {
-  color: var(--color-textos);
+#nosotros,
+#contacto {
   font-family: outfit;
 }
 
 #contacto h1 {
-  color: var(--color-textos);
-  font-family: outfit;
   text-align: center;
+  color: var(--color-textos);
 }
 
 section {
@@ -63,8 +44,9 @@ section {
   min-height: 100vh;
 }
 
-
+/*------------------------------------------------------------------------------------------------------------------------*/
 /*-------------------------------------------------------- HEADER --------------------------------------------------------*/
+/*------------------------------------------------------------------------------------------------------------------------*/
 
 header {
   background-color: rgba(0, 0, 0, 0);
@@ -87,7 +69,6 @@ header p {
   color: var(--color-secundario);
   font-weight: bold;
   font-size: xx-large;
-  
 }
 
 header nav ul {
@@ -96,19 +77,14 @@ header nav ul {
   margin: 0;
   padding-right: 1.25rem;
 
- 
-
-  @media (width < 480px){
+  @media (width < 480px) {
     padding: 0;
   }
 }
 
 header nav ul li {
   margin: 0 10px;
-
-  
 }
-
 
 header nav ul li a {
   color: var(--color-acento);
@@ -116,7 +92,7 @@ header nav ul li a {
   font-size: xx-large;
   transition: color 0.3s ease;
 
-  @media (width < 768px){
+  @media (width < 768px) {
     font-size: 1.2rem;
   }
 }
@@ -124,37 +100,38 @@ header nav ul li a {
 header nav ul li a:hover {
   color: #f2f2f2;
   text-shadow: 0 0 10px #f2f2f2,
-               0 0 20px #f2f2f2,
-               0 0 40px #f2f2f2,
-               0 0 80px #f2f2f2,
-               0 0 120px #f2f2f2;
+    0 0 20px #f2f2f2,
+    0 0 40px #f2f2f2,
+    0 0 80px #f2f2f2,
+    0 0 120px #f2f2f2;
 }
-
 
 .logotipo {
   display: flex;
   align-items: center;
   gap: 16px;
 
-  @media (width < 768px ){
-      p {
-        display: none;
-      }
-      img {
-        margin-left: 1rem;
-      }
+  @media (width < 768px) {
+    p {
+      display: none;
+    }
+
+    img {
+      margin-left: 1rem;
+    }
   }
 }
 
-
-/*-------------------------------------------------------- INICIO ----------------------------*/
+/*------------------------------------------------------------------------------------------------------------------------*/
+/*-------------------------------------------------------- INICIO --------------------------------------------------------*/
+/*------------------------------------------------------------------------------------------------------------------------*/
 
 #inicio {
   background-image: url('https://res.cloudinary.com/dkojgz9s6/image/upload/v1715800847/CodoACodoNJS/background_regenerado_en7lye.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 100vh; /* Hace que la sección ocupe toda la altura de la ventana */
+  height: 100vh;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
@@ -169,7 +146,7 @@ header nav ul li a:hover {
   padding: 20px;
 }
 
-.home-text p { 
+.home-text p {
   font-size: clamp(2rem, 4.2vw, 5rem);
   color: white;
   font-weight: bold;
@@ -254,14 +231,16 @@ header nav ul li a:hover {
 
 
 
+/*------------------------------------------------------------------------------------------------------------------------*/
 /*-------------------------------------------------------- CONTENIDO --------------------------------------------------------*/
+/*------------------------------------------------------------------------------------------------------------------------*/
 
 
 #contenido {
   position: relative;
   background-color: var(--color-primario);
   width: 100vw;
-  min-height: 100vh; /* Ensure it can grow */
+  min-height: 100vh;
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -269,7 +248,7 @@ header nav ul li a:hover {
 }
 
 .slider-container {
-  position: relative; /* Needed for absolutely positioning the buttons */
+  position: relative;
   width: 60%;
   display: flex;
   flex-direction: column;
@@ -313,7 +292,7 @@ header nav ul li a:hover {
   max-width: 80%;
   height: 300px;
   border-radius: 20px;
-  
+
 }
 
 .zocalo {
@@ -330,16 +309,16 @@ header nav ul li a:hover {
   height: 90px;
   max-width: 20%;
   border-radius: 20px;
-  object-fit:contain;
+  object-fit: contain;
 }
-  
+
 @media screen and (min-width: 768px) {
   .zocalo img {
-    transition: transform 0.3s ease; 
+    transition: transform 0.3s ease;
   }
 
   .zocalo img:hover {
-    transform: scale(1.5); /* Escala la imagen al 120% en el efecto hover */
+    transform: scale(1.5);
   }
 }
 
@@ -353,7 +332,8 @@ button.next {
   border: none;
   padding: 10px;
   cursor: pointer;
-  z-index: 10; /* Ensure buttons are on top of the content */
+  z-index: 10;
+  /* Ensure buttons are on top of the content */
 }
 
 button.prev {
@@ -369,27 +349,27 @@ button.next:hover {
   background-color: rgba(0, 0, 0, 0.8);
 }
 
-/* Media Queries for Responsiveness */
+/* Media Queries */
 @media (max-width: 768px) {
   .slider-container {
     width: 80%;
     height: auto;
   }
-  
+
   .slide h2,
   .slide p {
     width: 90%;
   }
-  
+
   .main-img {
     width: 90%;
     height: auto;
   }
-  
+
   .zocalo {
     flex-direction: column;
   }
-  
+
   .zocalo img {
     max-width: 80%;
     height: auto;
@@ -401,21 +381,21 @@ button.next:hover {
     width: 90%;
     height: auto;
   }
-  
+
   .slide h2,
   .slide p {
     width: 100%;
     text-align: center;
   }
-  
+
   .main-img {
     width: 100%;
   }
-  
+
   .zocalo {
     flex-direction: column;
   }
-  
+
   .zocalo img {
     max-width: 90%;
     height: auto;
@@ -436,7 +416,7 @@ button.next:hover {
   text-align: center;
   padding: 0.5em;
   z-index: 999;
-  
+
 }
 
 #boton-arriba:hover {
@@ -450,16 +430,16 @@ button.next:hover {
 
 @media (max-width:480px) {
   #boton-arriba {
-  width: 20px;
-  height: 20px;
-  top: 85%;
-  left: 90%;
+    width: 20px;
+    height: 20px;
+    top: 85%;
+    left: 90%;
   }
 }
 
-
-
+/*------------------------------------------------------------------------------------------------------------------------*/
 /*-------------------------------------------------------- NOSOTROS --------------------------------------------------------*/
+/*------------------------------------------------------------------------------------------------------------------------*/
 
 #nosotros {
   color: var(--color-textos);
@@ -525,8 +505,9 @@ button.next:hover {
   padding: 20px;
 }
 
-
+/*------------------------------------------------------------------------------------------------------------------------*/
 /*-------------------------------------------------------- CONTACTO --------------------------------------------------------*/
+/*------------------------------------------------------------------------------------------------------------------------*/
 
 .container-form {
   max-width: 1200px;
@@ -624,7 +605,9 @@ textarea {
   margin-top: 20px;
 }
 
+/*------------------------------------------------------------------------------------------------------------------------*/
 /*-------------------------------------------------------- FOOTER --------------------------------------------------------*/
+/*------------------------------------------------------------------------------------------------------------------------*/
 
 #footer {
   display: flex;
@@ -644,14 +627,16 @@ textarea {
 #footer .social-icons a {
   margin: 0 10px;
   text-decoration: none;
-  transition: color 0.3s ease; /* Transición suave para el cambio de color */
+  transition: color 0.3s ease;
+  /* Transición suave para el cambio de color */
   color: #00FFC9;
 }
 
 #footer .social-icons a:hover {
-  color: var(--color-secundario); /* Cambia el color al color secundario al hacer hover */
+  color: var(--color-secundario);
+  /* Cambia el color al color secundario al hacer hover */
 }
 
 #footer .social-icons i {
-  font-size: 2em; 
+  font-size: 2em;
 }
