--- a/styles.css
+++ b/styles.css
@@ -192,7 +192,7 @@ header nav ul li a:hover {
   content: "";
   position: absolute;
   background: var(--color-neon);
-  top: 120%;
+  top: 100%;
   left: 0;
   width: 100%;
   height: 100%;
@@ -337,7 +337,7 @@ button.next {
   padding: 10px;
   cursor: pointer;
   z-index: 10;
-  /* Ensure buttons are on top of the content */
+  
 }
 
 button.prev {
@@ -421,7 +421,7 @@ button.next:hover {
   text-align: center;
   padding: 0.5em;
   z-index: 999;
-
+  filter: drop-shadow(#f2f2f2 1px 1px);
 }
 
 #boton-arriba:hover {
