--- a/styles.css
+++ b/styles.css
@@ -66,9 +66,13 @@ header {
 header p {
   margin: 0;
   padding-left: 20px;
-  color: var(--color-secundario);
+  color: var(--color-textos);
   font-weight: bold;
   font-size: xx-large;
+}
+
+header span {
+  color: var(--color-secundario);
 }
 
 header nav ul {
@@ -90,6 +94,7 @@ header nav ul li a {
   color: var(--color-acento);
   text-decoration: none;
   font-size: xx-large;
+  font-weight:600;
   transition: color 0.3s ease;
 
   @media (width < 768px) {
